# summoner

./: .gitignore  README.md  cast.ps1  connect.ps1  prepare.ps1  pyproject.toml  summoner.rdp
summoner/: __main__.py  connectors.py  evocation.py  summoner.py  util.py
summoner/conf/: Default.rdp  Default.vnc  connection_funcs.py  connection_types.py
summoner/lib/: boto.py  const.py  decorators.py  instance.py  ssm.py
