[project]
name = "summoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.11",
    "pick>=2.4.0",
    "pytz>=2025.2",
]

[project.scripts]
summoner = "summoner.__main__:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true